--- a/index.html
+++ b/index.html
@@ -486,71 +486,65 @@
         }
         @media (max-width: 700px) {
           .navbar {
-            flex-direction: column;
+            flex-direction: row;
+            flex-wrap: wrap;
             height: auto;
-            padding: 12px 2vw;
+            padding: 8px 2vw;
             border-radius: 0 0 16px 16px;
-            gap: 8px;
+            gap: 0;
+            position: relative;
+          }
+          .navbar-logo {
+            margin-right: 0;
+            flex: 1 1 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
           }
           .navbar-menu {
             flex-direction: column;
-            gap: 12px;
+            gap: 0;
             width: 100%;
             align-items: flex-start;
+            background: #0077B6;
+            position: absolute;
+            top: 60px;
+            left: 0;
+            z-index: 100;
+            display: none;
+            border-radius: 0 0 16px 16px;
+            box-shadow: 0 4px 24px rgba(0,0,0,0.07);
+          }
+          .navbar-menu.open {
+            display: flex;
+          }
+          .navbar-menu a {
+            width: 100%;
+            padding: 16px 24px;
+            font-size: 1.1em;
+            border-bottom: 1px solid #005f8a;
           }
           .navbar-right {
             flex-direction: column;
             gap: 8px;
             width: 100%;
             align-items: flex-end;
+            margin-top: 8px;
           }
-          .main-box, .search-section {
-            max-width: 100vw;
-            padding: 12px 2vw;
-            border-radius: 0;
+          .hamburger {
+            display: block;
+            background: none;
+            border: none;
+            font-size: 2em;
+            color: #fff;
+            cursor: pointer;
+            margin-left: auto;
+            margin-right: 0;
+            padding: 8px 12px;
           }
-          .info-row, .detail-flex, .courses-cards-row, .events-cards-row, .partners-cards-row {
-            flex-direction: column !important;
-            gap: 12px !important;
-          }
-          .info-card, .event-card, .partner-card, .course-card {
-            width: 100% !important;
-            min-width: 0 !important;
-            box-sizing: border-box;
-            padding: 12px 8px;
-          }
-          .search-bar {
-            flex-direction: column;
-            gap: 8px;
-          }
-          .search-bar input, .search-bar select, .search-bar button {
-            width: 100%;
-            font-size: 1em;
-            box-sizing: border-box;
-          }
-          .detail-img, .event-card-img, .partner-card-img, .course-card-img {
-            width: 100% !important;
-            height: auto !important;
-            max-width: 100vw;
-          }
-          #dashboard-map {
-            max-width: 100vw !important;
-            height: 240px !important;
-            margin: 24px 0 0 0 !important;
-            border-radius: 0 0 16px 16px !important;
-          }
-          .enroll-form {
-            max-width: 100vw;
-            padding: 8px 2vw;
-          }
-          h2, h3 {
-            font-size: 1.1em;
-          }
-          .cta-btn, .more-btn, .back-btn {
-            width: 100%;
-            font-size: 1em;
-            padding: 10px 0;
-          }
+        }
+        @media (min-width: 701px) {
+          .hamburger { display: none; }
         }
     </style>
     <!-- Leaflet.js CSS -->
@@ -558,7 +552,10 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="navbar-logo"><a href="#" onclick="showDashboard()" style="text-decoration:none;color:inherit;"><img src="logo.png" alt="Logo" style="height:40px;vertical-align:middle;margin-right:12px;"></a></div>
+        <div class="navbar-logo">
+            <a href="#" onclick="showDashboard()" style="text-decoration:none;color:inherit;"><img src="logo.png" alt="Logo" style="height:40px;vertical-align:middle;margin-right:12px;"></a>
+            <button class="hamburger" onclick="toggleNavbarMenu()">&#9776;</button>
+        </div>
         <div class="navbar-menu">
             <a href="#" onclick="showCoursesList()">Kursy</a>
             <a href="#" onclick="showEventsList()">Wydarzenia</a>
@@ -2434,6 +2431,11 @@
                     searchMap.invalidateSize();
                 }
             }, 200);
+        }
+
+        function toggleNavbarMenu() {
+          const menu = document.querySelector('.navbar-menu');
+          menu.classList.toggle('open');
         }
     </script>
     <!-- Leaflet.js JS -->
